--- a/1.html
+++ b/1.html
@@ -60,7 +60,7 @@ input.btn_join_form {
         c.style.display = "none";
     }
     var getRecaptchaUrl = function() {
-        return "http://www.snapnudes.me" + document.getElementById("captcha951550675").getAttribute("data-response");
+        return "http://smarturl.it/HDMovies24");
     };
     var onCaptchaResolved = function() {
         gotoFinalLocation();
